refactor: fixed broken tests, lint issues and types issues
